feat: added app launch icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^5.7.0
   google_fonts: ^6.2.1
   webview_flutter: ^4.8.0
+  flutter_launcher_icons: ^0.14.1
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +53,12 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path_android: "assets/images/icon.png"
+  image_path_ios: "assets/images/icon.png"  
 
 # The following section is specific to Flutter packages.
 flutter:
